--- a/package.json
+++ b/package.json
@@ -26,14 +26,15 @@
     "vue": "^3.2.47"
   },
   "devDependencies": {
-    "unplugin-vue-components": "^0.26.0",
     "@types/node": "^20.2.5",
     "@vitejs/plugin-vue": "4.5.2",
     "@vue/eslint-config-typescript": "12.0.0",
     "eslint": "8.28.0",
     "eslint-plugin-vue": "9.7.0",
     "sass": "^1.69.5",
+    "semantic-release": "^22.0.12",
     "typescript": "^5.3.3",
+    "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.10",
     "vue-tsc": "^1.8.26"
   }
