--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "dev": "vite",
     "build": "vue-tsc --declaration --emitDeclarationOnly && vite build",
     "types": "vue-tsc ",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:serve": "vitepress serve docs"
   },
   "dependencies": {
-    "date-fns": "^3.0.0",
-    "vue": "^3.2.47"
+    "date-fns": "^3.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.2.5",
@@ -36,6 +38,8 @@
     "typescript": "^5.3.3",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.10",
+    "vitepress": "^1.0.0-rc.33",
+    "vue": "^3.3.13",
     "vue-tsc": "^1.8.26"
   }
 }
