--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -25,6 +25,7 @@ jobs:
     - run: npm run build
 
   release:
+      if: github.event_name != 'pull_request' && github.event_name != 'merge_group'
       name: Release
       runs-on: ubuntu-latest
       needs: build-and-test
