--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "@types/node": "^20.2.5",
     "@vitejs/plugin-vue": "4.5.2",
     "@vue/eslint-config-typescript": "12.0.0",
-    "eslint": "8.28.0",
+    "eslint": "8.56.0",
+    "eslint-plugin-vue": "9.7.0",
     "sass": "^1.69.5",
     "eslint-plugin-vue": "9.19.2",
     "semantic-release": "^22.0.12",
