--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -2,13 +2,19 @@ name: Build, Test, and Release
 
 on:
   push:
-    branches: [ main, dev ]
+    branches: [main, dev]
+    paths:
+      - "src/**"
+      - "package.json"
+      - "package-lock.json"
+      - ".releaserc.json"
+      - ".github/workflows/**"
+
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   build-and-test:
-
     runs-on: ubuntu-latest
 
     strategy:
@@ -16,35 +22,60 @@ jobs:
         node-version: [18.x, 20.x, 21.x]
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-    - run: npm ci
-    - run: npm run build
+      - uses: actions/checkout@v4
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+      - run: npm ci
+      - run: npm run build
+
+  dry-release:
+    if: github.event_name == 'pull_request' || github.event_name == 'merge_group'
+    name: Dry Release
+    runs-on: ubuntu-latest
+    needs: build-and-test
+    steps:
+      - name: Checkout ✅
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          token: ${{ secrets.GH_TOKEN }}
+      - name: Setup Node.js 🔧
+        uses: actions/setup-node@v4
+        with:
+          node-version: "lts/*"
+      - name: Install dependencies 🛠️
+        run: npm ci
+      - name: Build 📦
+        run: npm run build
+      - name: Dry Release 🚀
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npx semantic-release --dry-run --no-ci
 
   release:
-      if: github.event_name != 'pull_request' && github.event_name != 'merge_group'
-      name: Release
-      runs-on: ubuntu-latest
-      needs: build-and-test
-      steps:
-        - name: Checkout ✅
-          uses: actions/checkout@v4
-          with:
-              fetch-depth: 0
-              token: ${{ secrets.GH_TOKEN }}
-        - name: Setup Node.js 🔧
-          uses: actions/setup-node@v4
-          with:
-              node-version: "lts/*"
-        - name: Install dependencies 🛠️
-          run: npm ci
-        - name: Build 📦
-          run: npm run build
-        - name: Release 🚀
-          env:
-              GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-              NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-          run: npx semantic-release
+    if: github.event_name != 'pull_request' && github.event_name != 'merge_group'
+    name: Release
+    runs-on: ubuntu-latest
+    needs: build-and-test
+    steps:
+      - name: Checkout ✅
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          token: ${{ secrets.GH_TOKEN }}
+      - name: Setup Node.js 🔧
+        uses: actions/setup-node@v4
+        with:
+          node-version: "lts/*"
+      - name: Install dependencies 🛠️
+        run: npm ci
+      - name: Build 📦
+        run: npm run build
+      - name: Release 🚀
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npx semantic-release
