--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "types": "./dist/src/index.d.ts",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --declaration --emitDeclarationOnly && vite build",
+    "build": "vite build && vue-tsc --declaration --emitDeclarationOnly",
     "types": "vue-tsc ",
     "preview": "vite preview",
     "docs:dev": "vitepress dev docs",
@@ -25,21 +25,21 @@
     "docs:serve": "vitepress serve docs"
   },
   "dependencies": {
-    "date-fns": "^3.0.0"
+    "date-fns": "^3.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.2.5",
     "@vitejs/plugin-vue": "4.5.2",
     "@vue/eslint-config-typescript": "12.0.0",
-    "eslint": "8.28.0",
-    "eslint-plugin-vue": "9.7.0",
+    "eslint": "8.56.0",
     "sass": "^1.69.5",
+    "eslint-plugin-vue": "9.19.2",
     "semantic-release": "^22.0.12",
     "typescript": "^5.3.3",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.10",
     "vitepress": "^1.0.0-rc.33",
     "vue": "^3.3.13",
-    "vue-tsc": "^1.8.26"
+    "vue-tsc": "^1.8.27"
   }
 }
