--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -2,8 +2,7 @@ name: Deploy Docs
 on:
   workflow_dispatch: {}
   push:
-    branches:
-      - main
+    branches: [main, dev]
     paths:
       - docs/**
 
