--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   build-and-test:
-    name: Build, Test, and Release
+    name: Build and Test
     runs-on: ubuntu-latest
 
     strategy:
