--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "types": "./dist/src/index.d.ts",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && vue-tsc --declaration --emitDeclarationOnly",
+    "build": "vue-tsc --declaration --emitDeclarationOnly && vite build",
     "types": "vue-tsc ",
     "preview": "vite preview",
     "docs:dev": "vitepress dev docs",
@@ -29,7 +29,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.10.8",
-    "@vitejs/plugin-vue": "4.5.2",
+    "@vitejs/plugin-vue": "5.0.3",
     "@vue/eslint-config-typescript": "12.0.0",
     "eslint": "8.56.0",
     "sass": "^1.69.5",
