--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,6 +6,8 @@ updates:
       interval: "daily"
     commit-message:
       prefix: "chore(deps)"
+    allow:
+      - dependency-type: "development"
 
   - package-ecosystem: "github-actions"
     directory: "/"
