--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -5,67 +5,12 @@ on:
     branches: [testDev]
 
 jobs:
-  build-and-test:
-    name: Build and Test
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x, 21.x]
-
-    steps:
-      - uses: actions/checkout@v4
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
-      - run: npm ci
-      - run: npm run build
-
-  automerge:
-    needs: build-and-test
-    runs-on: ubuntu-latest
-
-    permissions:
-      pull-requests: write
-      contents: write
-
-    steps:
-      - uses: fastify/github-action-merge-dependabot@v3.9.1
-
   dry-release:
     if: github.actor != 'dependabot[bot]' && github.actor != 'dependabot-preview[bot]' && (github.event_name == 'pull_request' || github.event_name == 'merge_group')
     name: Dry Release
     runs-on: ubuntu-latest
-    needs: build-and-test
-    steps:
-      - name: Checkout ✅
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          token: ${{ secrets.GH_TOKEN }}
-      - name: Setup Node.js 🔧
-        uses: actions/setup-node@v4
-        with:
-          node-version: "lts/*"
-      - name: Install dependencies 🛠️
-        run: npm ci
-      - name: Build 📦
-        run: |
-          touch .env
-          echo DRY_RUN=true >> .env
-          npm run build
-      - name: Dry Release 🚀
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: npx semantic-release --dry-run --no-ci
-
-  release:
-    if: github.actor != 'dependabot[bot]' && github.actor != 'dependabot-preview[bot]' &&  (github.event_name != 'pull_request' && github.event_name != 'merge_group')
-    name: Release
-    runs-on: ubuntu-latest
-    needs: build-and-test
+    env:
+      DRY_RUN: true
     steps:
       - name: Checkout ✅
         uses: actions/checkout@v4
@@ -80,8 +25,8 @@ jobs:
         run: npm ci
       - name: Build 📦
         run: npm run build
-      - name: Release 🚀
+      - name: Dry Release 🚀
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: npx semantic-release
+        run: npx semantic-release --dry-run --no-ci
