--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   ],
   "main": "./dist/time-blocks-vue.umd.cjs",
   "module": "./dist/time-blocks-vue.js",
+  "styles": "./dist/time-blocks-vue.css",
   "exports": {
-    ".": {
-      "import": "./dist/time-blocks-vue.js",
-      "require": "./dist/time-blocks-vue.umd.cjs"
-    },
-    "./style.css": "./dist/style.css"
+    ".": "./dist/time-blocks-vue.js",
+    "./*": "./dist/*",
+    "./styles": "./dist/time-blocks-vue.css",
+    "./styles.css": "./dist/time-blocks-vue.css"
   },
   "types": "./dist/src/index.d.ts",
   "scripts": {
@@ -29,17 +29,17 @@
     "vue": "^3.3.12"
   },
   "devDependencies": {
-    "@types/node": "^22.5.0",
-    "@vitejs/plugin-vue": "5.1.2",
+    "@types/node": "^22.10.3",
+    "@vitejs/plugin-vue": "5.2.1",
     "@vue/eslint-config-typescript": "13.0.0",
-    "eslint": "8.57.0",
-    "sass": "^1.77.8",
-    "eslint-plugin-vue": "9.27.0",
-    "semantic-release": "^24.1.0",
+    "eslint": "8.57.1",
+    "sass": "^1.83.0",
+    "eslint-plugin-vue": "9.32.0",
+    "semantic-release": "^24.2.0",
     "typescript": "^5.4.5",
-    "unplugin-vue-components": "^0.27.4",
-    "vite": "^5.4.2",
-    "vitepress": "^1.3.4",
-    "vue-tsc": "^2.0.29"
+    "unplugin-vue-components": "^0.27.5",
+    "vite": "^6.0.6",
+    "vitepress": "^1.5.0",
+    "vue-tsc": "^2.1.10"
   }
 }
